@@ -66,6 +66,40 @@ if (strlen($db) && (! empty($db_rename) || ! empty($db_copy))) {
             $GLOBALS['pma']->databases->build();
         }
 
+        if (PMA_MYSQL_INT_VERSION >= 50000) {
+            // here I don't use DELIMITER because it's not part of the
+            // language; I have to send each statement one by one
+
+            // to avoid selecting alternatively the current and new db
+            // we would need to modify the CREATE definitions to qualify
+            // the db name
+            $procedure_names = PMA_DBI_get_procedures_or_functions($db, 'PROCEDURE');
+            if ($procedure_names) {
+                foreach($procedure_names as $procedure_name) {
+                    PMA_DBI_select_db($db);
+                    $tmp_query = PMA_DBI_get_definition($db, 'PROCEDURE', $procedure_name);
+                    // collect for later display
+                    $GLOBALS['sql_query'] .= "\n" . $tmp_query;
+                    PMA_DBI_select_db($newname);
+                    PMA_DBI_query($tmp_query);
+                }
+            }
+
+            $function_names = PMA_DBI_get_procedures_or_functions($db, 'FUNCTION');
+            if ($function_names) {
+                foreach($function_names as $function_name) {
+                    PMA_DBI_select_db($db);
+                    $tmp_query = PMA_DBI_get_definition($db, 'FUNCTION', $function_name);
+                    // collect for later display
+                    $GLOBALS['sql_query'] .= "\n" . $tmp_query;
+                    PMA_DBI_select_db($newname);
+                    PMA_DBI_query($tmp_query);
+                }
+            }
+        }
+        // go back to current db, just in case
+        PMA_DBI_select_db($db);
+
         if (isset($GLOBALS['add_constraints']) || $move) {
             $GLOBALS['sql_constraints_query_full_db'] = array();
         }
@@ -177,40 +211,6 @@ if (strlen($db) && (! empty($db_rename) || ! empty($db_copy))) {
 
             unset($GLOBALS['sql_constraints_query_full_db'], $one_query);
         }
-
-        if (PMA_MYSQL_INT_VERSION >= 50000) {
-            // here I don't use DELIMITER because it's not part of the
-            // language; I have to send each statement one by one
-
-            // to avoid selecting alternatively the current and new db
-            // we would need to modify the CREATE definitions to qualify
-            // the db name
-            $procedure_names = PMA_DBI_get_procedures_or_functions($db, 'PROCEDURE');
-            if ($procedure_names) {
-                foreach($procedure_names as $procedure_name) {
-                    PMA_DBI_select_db($db);
-                    $tmp_query = PMA_DBI_get_definition($db, 'PROCEDURE', $procedure_name);
-                    // collect for later display
-                    $GLOBALS['sql_query'] .= "\n" . $tmp_query;
-                    PMA_DBI_select_db($newname);
-                    PMA_DBI_query($tmp_query);
-                }
-            }
-
-            $function_names = PMA_DBI_get_procedures_or_functions($db, 'FUNCTION');
-            if ($function_names) {
-                foreach($function_names as $function_name) {
-                    PMA_DBI_select_db($db);
-                    $tmp_query = PMA_DBI_get_definition($db, 'FUNCTION', $function_name);
-                    // collect for later display
-                    $GLOBALS['sql_query'] .= "\n" . $tmp_query;
-                    PMA_DBI_select_db($newname);
-                    PMA_DBI_query($tmp_query);
-                }
-            }
-        }
-        // go back to current db, just in case
-        PMA_DBI_select_db($db);
 
         // Duplicate the bookmarks for this db (done once for each db)
         if (! $_error && $db != $newname) {
